# ScriptGo

./: .covopt.toml  .gitignore  Cargo.toml  README.md  audit.md
benches/: concurrency_bench.rs  vm_bench.rs
blender_sandbox/: coevolution_sandbox.py  dog_sandbox.py  headless_sandbox.py  run_dog_sandbox.sh  run_sandbox.sh
examples/: ai_contest.rs  async_dsl.rs  async_native.rs  blender_contest.rs  chromium_contest.rs  coroutine_native.rs  db_contest.rs  debug_parser.rs  http_server.rs  lua_contest.rs  macro_dsl.rs  mmap_native.rs  paradigm_contest.rs  r_contest.rs  sgl3d_contest.rs  simd_native.rs  wasm_contest.rs
examples/benchmarks/: ai_bench.py  bench.js  bench.py  blender_bench.py  db_filter.py  r_vector.py
examples/markdown_notes/: Cargo.toml  logic.sgo  tauri.conf.json  test_drag.rs
examples/markdown_notes/plugins/hello_world/: Cargo.toml  hello.wasm
examples/markdown_notes/plugins/hello_world/src/: lib.rs
examples/markdown_notes/src/: lib.rs  main.rs  wasm_plugin.rs
examples/markdown_notes/ui/: devtools.html  index.html
examples/tauri_framework/: Cargo.toml  tauri.conf.json
examples/tauri_framework/src/: main.rs
examples/tauri_framework/ui/: index.html
sgl_macros/: Cargo.toml
sgl_macros/src/: lib.rs
src/: assembler.rs  binary.rs  instruction.rs  lib.rs  main.rs  sync.rs  vm.rs
src/compiler/: ast.rs  codegen.rs  ir.rs  lexer.rs  mod.rs  optimizer.rs  parser.rs
src/sgl/: assembler.rs  instruction.rs  mod.rs  simd_ops.rs  vm.rs  vm_tests.rs
tools/create-scriptgo-app/: .covopt.toml  Cargo.toml
tools/create-scriptgo-app/my-test-app/: Cargo.toml  tauri.conf.json
tools/create-scriptgo-app/my-test-app/src/: lib.rs  main.rs
tools/create-scriptgo-app/my-test-app/ui/: index.html
tools/create-scriptgo-app/src/: main.rs
