[package]
name = "script_go"
version = "0.1.0"
edition = "2021"

exclude = [".covopt/"]

[dependencies]
no_std_tool = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
num_cpus = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
arc-swap = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[bench]]
name = "vm_bench"
harness = false

[[bench]]
name = "concurrency_bench"
harness = false


