[package]
name = "script_go"
version = "0.1.0"
edition = "2021"

exclude = [".covopt/"]

[dependencies]
no_std_tool = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
num_cpus = { workspace = true }

[dev-dependencies]
rkyv = { workspace = true }
criterion = { workspace = true }
arc-swap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
mlua = { version = "0.9", features = ["lua54", "vendored"] }
wasmi = "0.31"
wat = "1.0"

[[bench]]
name = "vm_bench"
harness = false

[[bench]]
name = "concurrency_bench"
harness = false


