[package]
name = "markdown_notes"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
script_go = { path = "../../" }
pulldown-cmark = "0.13.4"
encoding_rs = "0.8.35"
window-vibrancy = "0.7.1"
wasmtime = "46.0.1"
