[package]
name = "markdown_notes"
version = "0.1.0"
edition = "2021"

exclude = [".covopt/"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
script_go = { path = "../../" }
pulldown-cmark = "0.13.4"
encoding_rs = "0.8.35"
window-vibrancy = "0.7.1"
wasmtime = "46.0.1"
