[package]
name = "tauri_framework"
version = "0.1.0"
edition = "2021"

exclude = [".covopt/"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
script_go = { path = "../../" }
no_std_tool = { path = "../../../../core/no_std_tool" }
