[package]
name = "my-test-app"
version = "0.1.0"
edition = "2021"

exclude = [".covopt/"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
script_go = { git = "https://github.com/hianova/ScriptGo" }

[workspace]
